--- a/static/styles/main.scss
+++ b/static/styles/main.scss
@@ -36,7 +36,7 @@ body {
     display: flex;
     flex-direction: column;
     font-size: 16px;
-    color: #0d0d0d;
+    color: #141414;
     height: 100vh;
     width: 100%;
     margin: 0;
