--- a/static/styles/pages/_index.scss
+++ b/static/styles/pages/_index.scss
@@ -120,14 +120,15 @@
                         display: flex;
                         color: inherit;
                         cursor: pointer;
+                        margin-bottom: 1rem;
                         font-size: 0.925rem;
                         align-items: center;
                         column-gap: 1.25rem;
                         text-decoration: none;
                         border-radius: 1.25rem;
-                        margin-bottom: 0.75rem;
                         padding: 1rem 2.5rem 1rem 1.125rem;
-                        border: 1px solid rgba(64, 64, 64, 0.1);
+                        box-shadow: rgba(64, 64, 64, 0.1) 0px 0px 0px 1px inset;
+
                         transition: all 0.15s cubic-bezier(0,0,.2,1);
 
                         &:hover {
@@ -141,10 +142,14 @@
                         }
 
                         .item__icon {
+                            width: 45px;
+                            height: 45px;
+                            display: flex;
                             font-size: 0.875rem;
                             background: rgba(64, 64, 64, 0.06);
                             border-radius: 50%;
-                            padding: 0.75rem;
+                            align-items: center;
+                            justify-content: center;            
                         }
 
                         .item__name {
@@ -164,8 +169,8 @@
                             &:before {
                                 content: "";
                                 display: block;
-                                width: 7px;
-                                height: 7px;
+                                width: 8px;
+                                height: 8px;
                                 border-radius: 50%;
                             }
 
@@ -186,6 +191,10 @@
                             column-gap: 0.5rem;
                             margin-right: 1rem;
                             align-items: center;
+
+                            i {
+                                font-size: 0.875rem;
+                            }
                         }
 
                         .item__date {
