--- a/static/templates/pages/index.html
+++ b/static/templates/pages/index.html
@@ -100,11 +100,9 @@ Clearly
                     <i class="fa-kit fa-studio"></i>
                 </div>
                 <div class="item__name">${container.id}</div>
-                <div class="item__gpu">
+                <div class="item__config">
+                    <i class="fa-kit fa-cpu"></i>16 CPU
                     <i class="fa-kit fa-nvidia"></i>RTX 3090
-                </div>
-                <div class="item__cpu">
-                    <i class="fa-kit fa-cpu"></i>16 vCPU
                 </div>
                 <div class="item__status item__status--${container.status.toLowerCase()}">
                     ${container.status}
