--- a/static/templates/pages/index.html
+++ b/static/templates/pages/index.html
@@ -94,7 +94,7 @@ Clearly
             .map(([id, container]) => `
             <a class="panel__item" href="/studio/${container.id}">
                 <button class="item__more">
-                    <i class="fa-sharp fa-light fa-ellipsis"></i>
+                    <i class="fa-kit fa-more"></i>
                 </button>
                 <div style="font-size: 0.875rem;" class="item__icon">
                     <i class="fa-kit fa-studio"></i>
@@ -106,7 +106,6 @@ Clearly
                 </div>
                 <div class="item__status item__status--${container.status.toLowerCase()}">
                     <svg viewBox="0 0 80 80" fill="none" role="img" xmlns="http://www.w3.org/2000/svg" width="24px" height="24px">
-                        <title>hackathon1-mx9bj</title>
                         <mask id="mask__marble" maskUnits="userSpaceOnUse" x="0" y="0" width="80" height="80">
                             <rect width="80" height="80" rx="160" fill="#FFFFFF"></rect>
                         </mask>
