--- a/static/templates/layout/header.html
+++ b/static/templates/layout/header.html
@@ -11,4 +11,7 @@
     <div class="header__name">
         {{ id }}
     </div>
+    <button class="header__deploy">
+        Deploy
+    </button>
 </header>
