--- a/static/templates/main.html
+++ b/static/templates/main.html
@@ -31,6 +31,9 @@
             {% block navigation %}
                 {% include "layout/navigation.html" %}
             {% endblock %}
+            {% block sidebar %}
+                {% include "layout/sidebar.html" %}
+            {% endblock %}
             <div id="content">
                 {% block content %}
                 <!-- Content Here -->
