--- a/static/styles/layout/_header.scss
+++ b/static/styles/layout/_header.scss
@@ -2,7 +2,7 @@
     display: flex;
     flex-shrink: 0;
     height: 4.5rem;
-    padding: 0 0.25rem 0 1.5rem;
+    padding: 0 1.5rem;
     column-gap: 1.5rem;
     align-items: center;
 
@@ -22,7 +22,7 @@
     .header__delimiter {
         width: 1px;
         height: 1.5rem;
-        background: rgba(64, 64, 64, 0.2);
+        background: rgba(64, 64, 64, 0.15);
     }
 
     .header__logo {
@@ -39,5 +39,16 @@
         flex-grow: 1;
         font-weight: 300;
         color: #707070;
+    }
+
+    .header__deploy {
+        font-size: 1rem;
+        background: transparent;
+        box-shadow: rgba(64, 64, 64, 0.16) 0px 0px 0px 1px inset;
+        font-weight: 400;
+        line-height: 1;
+        padding: 0.75rem 1rem;
+        cursor: pointer;
+        border-radius: 1.5rem;
     }
 }
