--- a/static/styles/main.scss
+++ b/static/styles/main.scss
@@ -7,6 +7,7 @@
 /* Layout */
 @import "./layout/_header";
 @import "./layout/_navigation";
+@import "./layout/_sidebar";
 
 /* Pages */
 @import "./pages/_index";
