--- a/static/styles/pages/_studio.scss
+++ b/static/styles/pages/_studio.scss
@@ -3,16 +3,9 @@
     padding: 0 1rem 1rem;
 
     .studio__content {
-        opacity: 0;
         height: 100%;
         overflow: hidden;
         border-radius: 1.25rem;
-        background: rgba(64, 64, 64, 0.06);
-        animation: fadein 2s cubic-bezier(0,0,.2,1) forwards;
-
-        @keyframes fadein {
-            from { opacity: 0 }
-            to { opacity: 1 }
-        }
+        box-shadow: rgba(64, 64, 64, 0.1) 0px 0px 0px 1px inset;
     }
 }
