--- a/static/templates/pages/studio.html
+++ b/static/templates/pages/studio.html
@@ -13,16 +13,114 @@
 {% endblock %}
 
 {% block headers %}
-<script>
-    const promise = fetch('/api/studios/{{id}}')
-        .then(r => r.json())
-        .then(studio => {
-            if (!studio.success) {
-                throw new Error(studio.error);
+<script async>
+    try {
+        const secure = window.location.protocol == 'https:';
+        const ws = new WebSocket(
+            `${secure ? 'wss' : 'ws'}://${window.location.host}/api/containers/{{id}}/proxy/8080`
+        );
+        
+        ws.onmessage = (event) => {
+            const message = JSON.parse(event.data);
+            if (message.success) {
+                window.proxy = message.proxy;
+                // Fetch /api/containers within the proxy.
+                fetch(`${secure ? 'https' : 'http'}://${window.location.hostname}:${window.proxy}/api/containers`)
+                    .then(r => r.json())
+                    .then(data => {
+                        console.log(data);
+                        if (Object.keys(data.containers).length === 0) {
+                            // No containers yet.
+                            start({
+                                id: 'vscode',
+                                image: 'codercom/code-server:4.101.2-39',
+                                command: ['/usr/bin/entrypoint.sh', '--bind-addr', '0.0.0.0:8080', '.', '--auth', 'none'],
+                                ports: { '8081': '8080' },
+                            });
+                        } else {
+                            // Containers already running.
+                            document.getElementById('sidebar').innerHTML = Object.entries(data.containers)
+                                .map(([id, container]) => {
+                                    //const port = Object.keys(container.ports)[0];
+                                    // BUG: with --json port mappping {"8081->8080/tcp": ""} in clearly list command.
+                                    const port = 8081;
+                                    return `<button
+                                                class="sidebar__item sidebar__item--selected" 
+                                                onclick="render(${port})">
+                                                    <i class="fa-kit fa-${id}"></i>
+                                            </button>`;
+                                }).join(' ');
+                        }
+                    })
+                    .catch((e) => {
+                        console.error(e);
+                        ws.close();
+                    });
+            } else {
+                console.error(data.error);
+                ws.close();
             }
-            window.studio = studio;
-            return studio;
-        });
+        };
+        
+        ws.onerror = () => {
+            setTimeout(() => {
+                // Attempt to reconnect.
+                if (confirm("Couldn't connect, reload?")) {
+                    location.reload();
+                }
+            }, 2000);
+        };
+    } catch (e) {
+        console.error(e);
+    }
+</script>
+<script>
+    function start(config) {
+        const secure = window.location.protocol == 'https:';
+        fetch(`${secure ? 'https' : 'http'}://${window.location.hostname}:${window.proxy}/api/containers`, {
+            method: 'POST',
+            body: JSON.stringify(config)
+        })
+            .then(r => r.json())
+            .then(data => {
+                if (data.success) {
+                    const port = Object.keys(config.ports)[0];
+                    document.getElementById('sidebar').innerHTML += `
+                        <button
+                            class="sidebar__item sidebar__item--selected"
+                            onclick="render('${config.id}', ${port}, ${window.proxy})">
+                                <i class="fa-kit fa-${config.id}"></i>
+                        </button>`;
+                } else {
+                    console.error(data.error);
+                }
+            })
+            .catch(e => {
+                console.error(e);
+            });
+    }
+
+    function render(port) {
+        const secure = window.location.protocol == 'https:';
+        const ws = new WebSocket(
+            `${secure ? 'wss' : 'ws'}://${window.location.host}/api/containers/{{id}}/proxy/${port}`
+        );
+        
+        ws.onmessage = (event) => {
+            const message = JSON.parse(event.data);
+            if (message.success) {
+                document.getElementById('iframe').src = `http://${window.location.hostname}:${message.proxy}`;
+            } else {
+                console.error(message.error);
+                ws.close();
+            }
+        };
+        ws.onerror = (e) => {
+            console.log(e);
+            console.error(e);
+            ws.close();
+        };
+    }
 </script>
 {% endblock %}
 
@@ -32,14 +130,4 @@
         <iframe id="iframe" width="100%" height="100%"></iframe>
     </div>
 </div>
-<script>
-    document.addEventListener('DOMContentLoaded', () => {
-        promise
-            .then(studio => {
-                document.getElementById('iframe').src = 
-                    `http://${window.location.hostname}:${studio.containers[0].proxy['8080']}`;
-            })
-            .catch(console.error);
-    });
-</script>
 {% endblock %}
